trying to dockerise